tests/grammar/types/union_ty/union_ty_err_0/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:11:7
   |
11 |     x.c = 1
   |       ^ Cannot add member 'c' to 'schemas ["A", "B"]'
   |